# rust_telegram

./: README.md
rohrpost/: .gitignore  Cargo.toml
rohrpost/examples/: hello_bot.rs
rohrpost/src/: helpers.rs  http_stream.rs  lib.rs  receiver.rs  sender.rs  telegram_methods.rs  telegram_receiver.rs  telegram_sender.rs  telegram_types.py  telegram_types.rs
