[package]
name = "rohrpost"
version = "0.1.0"
authors = ["Simon Auch <auchsimon@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tls = "0.6.0"
rustls = "0.16.0"
http="0.2.0"
derive_builder="0.9.0"
serde_json="*"
[dependencies.serde]
version="1.0.103"
features=["derive"]
[dependencies.futures]
version="0.3.1"
features=["thread-pool"]
[dependencies.async-std]
version="1.2.0"
features=["unstable"]
